--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,21 +15,16 @@ jobs:
 
     - name: Install dependencies
       run: | 
-        # обновление pip
         python -m pip install --upgrade pip 
-        # установка flake8 и его плагинов
+      # установка flake8 и его плагинов
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        # установка зависимостей
+      # установка зависимостей
         pip install -r requirements.txt 
 
     - name: Test with flake8 and django tests
       run: |
-        # запуск проверки проекта по flake8
         python -m flake8
-        # перейти в папку, содержащую manage.py — 
-        #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
         cd infra_project/
-        # запустить написанные разработчиком тесты
         python manage.py test
 
   build_and_push_to_docker_hub:
@@ -67,8 +62,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            # Выполняет pull образа с DockerHub
-            sudo docker pull apisland/infra_actions:latest
-            #остановка всех контейнеров
+            sudo docker pull apisland/infra_actions
             sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 apisland/infra_actions:latest
+            sudo docker run --rm -d -p 5000:5000 apisland/infra_actions
